Build home page

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,5 +1,56 @@
-<div class="p-2">
-  <h1 class="text-center">ClearWatt</h1>
-  <p>This is the ClearWatt app</p>
-  <p>API status: {{status}}</p>
+<div class="flex col">
+  <!-- Homepage -->
+  <div class="home__background">
+    <h1 class="text-center">ClearWatt</h1>
+    <p>This is the ClearWatt app</p>
+    <p>API status: {{status}}</p>
+  </div>
+
+  <!-- Potential -->
+  <div class="home__page">
+    <div class="home__half-content">
+      <h2 class="text-center">Green Hydrogen's Potential in Quebec</h2>
+      <p>Hydrogen is set to play a pivotal role in the global energy transition, with the potential to abate 80 gigatons of CO₂ emissions by 2050. As an energy storage medium and decarbonization tool for industries like steel, aviation, and heavy transport, hydrogen bridges renewable energy with hard-to-abate sectors. Achieving these ambitions will require over $300 billion in investments by 2030.</p>
+    </div>
+
+    <div class="home__half-image">
+      <img src="/mountain_side.jpg" alt="Mountain Side Image">
+    </div>
+  </div>
+
+  <!-- Producer -->
+  <div class="home__page">
+    <div class="home__half-image">
+      <img src="/mountain_rocky.jpg" alt="Mountain Rocky Image">
+    </div>
+
+    <div class="home__half-content home__producer">
+      <h2 class="text-center">Producer</h2>
+      <p>Hydrogen is set to play a pivotal role in the global energy transition, with the potential to abate 80 gigatons of CO₂ emissions by 2050. As an energy storage medium and decarbonization tool for industries like steel, aviation, and heavy transport, hydrogen bridges renewable energy with hard-to-abate sectors. Achieving these ambitions will require over $300 billion in investments by 2030.</p>
+    </div>
+  </div>
+
+  <!-- Consumer -->
+  <div class="home__page">
+    <div class="home__half-image">
+      <img src="/mountain_side.jpg" alt="Mountain Side Image">
+    </div>
+
+    <div class="home__half-content home__consumer">
+      <h2 class="text-center">Consumer</h2>
+      <p>Hydrogen is set to play a pivotal role in the global energy transition, with the potential to abate 80 gigatons of CO₂ emissions by 2050. As an energy storage medium and decarbonization tool for industries like steel, aviation, and heavy transport, hydrogen bridges renewable energy with hard-to-abate sectors. Achieving these ambitions will require over $300 billion in investments by 2030.</p>
+    </div>
+  </div>
+
+  <!-- About Us -->
+  <div class="home__page">
+    <div class="home__half-content home__about-us">
+      <h2 class="text-center">About Us</h2>
+      <p>Hydrogen is set to play a pivotal role in the global energy transition, with the potential to abate 80 gigatons of CO₂ emissions by 2050. As an energy storage medium and decarbonization tool for industries like steel, aviation, and heavy transport, hydrogen bridges renewable energy with hard-to-abate sectors. Achieving these ambitions will require over $300 billion in investments by 2030.</p>
+    </div>
+
+    <div class="home__half-image">
+      <img src="/mountain_rocky.jpg" alt="Mountain Rocky Image">
+    </div>
+  </div>
 </div>
