--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -1,13 +1,26 @@
 .home {
+    &__start {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    &__start-title {
+        font-size: 50px;
+    }
+
+    &__start-subtitle {
+        font-size: 24px;
+    }
+
     &__background {
         background-image: url('/mountain.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        height: 100vh; 
     }
 
     &__page {
