--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto ms-5 mb-2 mb-lg-0">
 
@@ -21,12 +22,17 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="" fragment="about-us">About Us</a>
         </li>
-
-
       </ul>
-      <button class="btn btn-primary btn-login">
-        <a class="nav-link" routerLink="/login">Login/Register</a>
-      </button>
+
+      @if (isLoggedIn) {
+        <span class="me-2">Hi, {{ profile.name }} ({{ profile.role}})</span>
+        <a routerLink="/login" (click)="logout()">Logout</a>
+      } @else {
+        <button class="btn btn-primary btn-login">
+          <a class="nav-link" routerLink="/login">Login/Register</a>
+        </button>
+      }
+
     </div>
   </div>
 </nav>
