Update home page

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="home__half-image">
-      <img src="/mountain_side.jpg" alt="Mountain Side Image">
+      <img src="/flag.png" alt="Quebec Flag">
     </div>
   </div>
 
