--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -2,7 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('/mountain.jpg');
+    background-image:
+        linear-gradient(
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+        ),
+        url('/home.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
