--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -24,15 +24,18 @@
         </li>
       </ul>
 
-      @if (isLoggedIn) {
-        <span class="me-2">Hi, {{ profile.name }} ({{ profile.role}})</span>
-        <a routerLink="/login" (click)="logout()">Logout</a>
-      } @else {
-        <button class="btn btn-primary btn-login">
-          <a class="nav-link" routerLink="/login">Login/Register</a>
-        </button>
-      }
-
+      <div class="nav-item">
+        @if (isLoggedIn) {
+          <span class="me-2">Hi, {{ profile.name }} ({{ profile.role}})</span>
+          <button class="btn btn-primary" (click)="logout()">
+            Logout
+          </button>
+        } @else {
+          <button class="btn btn-primary btn-login">
+            <a class="nav-link" routerLink="/login">Login/Register</a>
+          </button>
+        }
+      </div>
     </div>
   </div>
 </nav>
