--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -1,6 +1,6 @@
 $primary: #426b1f;
-$secondary: #cecece;
-$btn-border-radius: 0;
+$secondary: #535353;
+$btn-border-radius: 8px;
 $btn-padding-y: 8px;
 $btn-padding-x: 16px;
 
