--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -4,10 +4,10 @@
     align-items: center;
     background-image:
         linear-gradient(
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)
+            rgba(0, 0, 0, 0.2),
+            rgba(0, 0, 0, 0.2)
         ),
-        url('/home.png');
+        url('/producer.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
