--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
 
       <div class="nav-item">
         @if (isLoggedIn) {
-          <span class="me-2">Hi, {{ profile.name }} ({{ profile.role}})</span>
+          <span class="me-2 user-select-none">Hi, {{ profile.name }} ({{ profile.role}})</span>
           <button class="btn btn-primary" (click)="logout()">
             Logout
           </button>
