--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -7,7 +7,7 @@
             rgba(0, 0, 0, 0.2),
             rgba(0, 0, 0, 0.2)
         ),
-        url('/producer.jpg');
+        url('https://res.cloudinary.com/dodu3btfh/image/upload/c_pad,h_1080/v1740526758/producer_vyeje5.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -19,8 +19,6 @@
         top: 0;
         left: 0;
         padding: 8px;
-        font-size: 24px;
-        font-weight: 700;
         cursor: pointer;
     }
     
