--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -30,7 +30,7 @@
                 rgba(0, 0, 0, 0.2),
                 rgba(0, 0, 0, 0.2)
             ),
-            url('/flag.jpg');
+            url('https://res.cloudinary.com/dodu3btfh/image/upload/c_pad,h_1080/v1740526502/flag_kbs2zn.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -92,38 +92,28 @@
             text-align: center;
 
             img {
-                width: 175px;
-                margin-bottom: 0.5rem;
+                width: 75px;
+                margin-bottom: 8px;
             }
         }
     }
 
     &__logo {
         align-self: start;
-        width: 100px;
-        height: 100px;
-        margin-bottom: 10px;
-        font-size: 24px;
-        font-weight: 700;
-        color: var(--bs-primary);
+        margin-bottom: 12px;
     }
 
     &__footer {
         display: flex;
-        background-color: var(--bs-secondary);
-        color: #FFF;
-        padding: 20px;
+        align-items: center;
         justify-content: space-between;
-
-        &-logo {
-            font-size: 24px;
-            font-weight: 700;
-            color: var(--bs-primary);
-        }
+        padding: 16px;
+        background-color: #FFF;
+        color: var(--bs-secondary);
 
         &-links {
             display: flex;
-            gap: 20px;
+            gap: 64px;
         }
 
         .nav-link:hover {
