--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login">
   <div class="login__logo" routerLink="/">
-    LOGO ClearWatt 
+    <app-logo [size]="24" [fontSize]="24"></app-logo>
   </div>
 
   <div class="login__container">
