--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -107,7 +107,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 16px;
+        padding: 8px 12px;
         background-color: #FFF;
         color: var(--bs-secondary);
 
