--- a/frontend/src/app/components/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/marketplace/marketplace.component.html
@@ -1,4 +1,10 @@
-<div class="p-2">
-  <h1 class="text-center">Markeplace</h1>
-  <a class="nav-link" routerLink="/map">Check out interactive map</a>
+<app-market-nav></app-market-nav>
+<div class="marketplace">
+  <div>
+    content 1
+  </div>
+  <div>
+    content 2
+  </div>
+
 </div>
