--- a/frontend/src/app/shared/components/navbar/navbar.component.scss
+++ b/frontend/src/app/shared/components/navbar/navbar.component.scss
@@ -27,10 +27,25 @@
 
 .btn {
     &-login {
-        width: 225px;
+        width: 200px;
 
         a {
             color: #FFF;
         }
     }
+}
+
+.dropdown-toggle {
+    display: flex;
+    align-items: center;
+    padding: 8px 12px;
+    
+    &::after {
+        display: none;
+    }
+}
+
+.bi-person-circle {
+    font-size: 24px;
+    line-height: 24px;
 }
